Fix landing height on mobile

--- a/Assets/dev/less/main.less
+++ b/Assets/dev/less/main.less
@@ -62,6 +62,7 @@ html, body {
         text-align: center;
         justify-content: center;
         border-bottom: 5px solid @orange;
+        height: auto;
     }
 
     & > img {
@@ -137,7 +138,8 @@ html, body {
 
                     @media (max-width: @screen-xs-max) {
                         font-size: 30px;
-                        width: 100%
+                        width: 100%;
+                        box-sizing: border-box;
                     }
 
                     &:hover{
@@ -184,6 +186,12 @@ html, body {
     position: absolute;
     top: 100vh;
     width: 100%;
+
+
+    @media (max-width: @screen-md-max) {
+        position: static;
+    }
+
 
     & > header {
         @media (max-width: @screen-md-max) {
